--- a/index.html
+++ b/index.html
@@ -724,8 +724,8 @@
       <h2>certifications & leadership</h2>
       <div style="display: flex; gap: 24px; flex-wrap: wrap;">
         <div class="glass-card" style="padding: 24px 36px; display: flex; align-items: center; gap: 12px;"><i class="devicon-google-plain colored" style="font-size: 2.5rem;"></i> Google Cloud Innovator</div>
-        <div class="glass-card" style="padding: 24px 36px; display: flex; align-items; gap:12px;"><i class="devicon-amazonwebservices-original colored" style="font-size:2.5rem;"></i> AWS Practitioner</div>
-        <div class="glass-card" style="padding: 24px 36px; display: flex; align-items; gap:12px;"><i class="fas fa-certificate" style="color:#256ba0; font-size:2.5rem;"></i> Data Analysis (Pandas/BI) · '24</div>
+        <div class="glass-card" style="padding: 24px 36px; display: flex; align-items: center; gap: 12px;"><i class="devicon-amazonwebservices-original colored" style="font-size:2.5rem;"></i> AWS Practitioner</div>
+        <div class="glass-card" style="padding: 24px 36px; display: flex; align-items: center; gap: 12px;"><i class="fas fa-certificate" style="color:#256ba0; font-size:2.5rem;"></i> Data Analysis (Pandas/BI) · '24</div>
         <div class="glass-card" style="padding: 24px 36px; display: flex; align-items: center; gap: 12px;"><i class="devicon-google-plain colored" style="font-size: 2.5rem;"></i> Responsive Web Development - FreeCodeCamp  LNWRCSBN </div>
         <div class="glass-card" style="padding: 24px 36px; display: flex; align-items: center; gap: 12px;"><i class="devicon-amazonwebservices-original colored" style="font-size:2.5rem;"></i> Jobber man soft skill certification - Jobberman Nigeria</div>
         <div class="glass-card" style="padding: 24px 36px; display: flex; align-items: center; gap: 12px;"><i class="fas fa-certificate" style="color:#256ba0; font-size:2.5rem;"></i> Python Programming - FreeCodeCamp  LNWRCSBN </div>
